# quick-i18n

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: workflow.yml
example/: README.md  main.py
example/i18n/: __init__.py
example/i18n/translation/: ch.json  en.json  es.json  ru.json
quicki18n/: __init__.py  i18n.py
